--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mathutil"]
-	path = mathutil
-	url = https://github.com/VS-dev-cpu/mathutil
+[submodule "Math3D"]
+	path = Math3D
+	url = https://github.com/samthedev32/Math3D
