--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,20 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
-# Set C++ compiler flags for debug builds (use CMAKE_C_FLAGS for C)
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g")
-
-# Set C++ compiler flags for release builds
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
-
 # Dependency Libs
 add_subdirectory(EngineToolkit)
 
 # Source Files
 set(SOURCES
     src/Engine.cpp
+
+    # Math
+    src/math/vec/vec2.cpp
+    src/math/vec/vec3.cpp
+    src/math/vec/vec4.cpp
+
+    src/math/mat/mat3.cpp
+    src/math/mat/mat4.cpp
 
     # Core
     src/core/Window.cpp
@@ -39,10 +41,7 @@ set(LIBRARIES
 project(Artifex VERSION 0.1.0 LANGUAGES C CXX)
 
 add_library(${PROJECT_NAME} ${SOURCES})
-if(EMSCRIPTEN)
-    target_link_options(${PROJECT_NAME} PRIVATE "-s USE_WEBGL2=1 -s USE_GLFW=3 -s WASM=1")
-endif(EMSCRIPTEN)
 target_link_libraries(${PROJECT_NAME} ${LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC "include")
 
-add_subdirectory(hello_artifex)
+add_subdirectory(examples)
