--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,22 +3,13 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
 
-# Dependency Libs
-add_subdirectory(EngineToolkit)
-
 # Source Files
 set(SOURCES
     src/Engine.cpp
 
-    # Math
-    src/math/vec/vec2.cpp
-    src/math/vec/vec3.cpp
-    src/math/vec/vec4.cpp
-
-    src/math/mat/mat3.cpp
-    src/math/mat/mat4.cpp
-
     # Core
+    src/core/Log.cpp
+
     src/core/Window.cpp
     src/core/Load.cpp
     src/core/Render.cpp
@@ -34,7 +25,7 @@ set(SOURCES
 set(LIBRARIES
     SDL2
     SDL2_mixer
-    EngineToolkit
+    # EngineToolkit
 )
 
 # Project
