ECS under development

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,7 +1,9 @@
-add_subdirectory(graphics)
-add_subdirectory(audio)
-add_subdirectory(engine)
+# add_subdirectory(graphics)
+# add_subdirectory(audio)
+# add_subdirectory(engine)
 
-add_subdirectory(physics_simple)
+# add_subdirectory(physics_simple)
 
-add_subdirectory(games)
+add_subdirectory(ecs)
+
+# add_subdirectory(games)
