some stuff so i can work on my other computer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,4 @@ add_subdirectory(external)
 add_subdirectory(library)
 
 # example programs
-# add_subdirectory(examples)
+add_subdirectory(examples)
