--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,12 +1,1 @@
-#add_subdirectory(graphics)
-# add_subdirectory(audio)
-# add_subdirectory(engine)
-
-# add_subdirectory(physics_simple)
-
-#add_subdirectory(ecs)
-
-#add_subdirectory(games)
-
-add_subdirectory(window)
-add_subdirectory(renderer)
+add_subdirectory(hello_modules)
